--- a/client/scss/components/_listing.scss
+++ b/client/scss/components/_listing.scss
@@ -188,6 +188,8 @@ ul.listing {
     }
 
     .title {
+        word-break: break-word;
+
         h2 {
             text-transform: none;
             margin: 0;
